<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" app:navigationIcon="?attr/homeAsUpIndicator" app:title="@string/permissions"/>
    <com.samsung.accessory.hearablemgr.common.ui.ResponsiveWidthLayout android:layout_gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.samsung.accessory.hearablemgr.common.ui.RoundedCornerLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp">
            <ScrollView android:background="@color/contents_background" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="24dp" android:paddingEnd="24dp">
                    <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content1" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                    <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="#e6ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/eula_permissions_content2" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp">
                        <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" • " android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                            <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content3" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                            <TextView android:textSize="13sp" android:textColor="#b0b0b0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content4" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp">
                        <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" • " android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                            <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content5" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                            <TextView android:textSize="13sp" android:textColor="#b0b0b0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content6" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp">
                        <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" • " android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                            <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content7" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                            <TextView android:textSize="13sp" android:textColor="#b0b0b0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content8" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp">
                        <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" • " android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                            <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content9" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                            <TextView android:textSize="13sp" android:textColor="#b0b0b0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content10" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp">
                        <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" • " android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                            <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content11" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                            <TextView android:textSize="13sp" android:textColor="#b0b0b0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content12" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp">
                        <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" • " android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                            <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content13" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                            <TextView android:textSize="13sp" android:textColor="#b0b0b0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eula_permissions_content14" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                        </LinearLayout>
                    </LinearLayout>
                    <TextView android:textSize="15sp" android:textColor="#e5e5e5" android:id="@+id/text_guide_for_legacy" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/eula_permissions_content15" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_medium"/>
                </LinearLayout>
            </ScrollView>
        </com.samsung.accessory.hearablemgr.common.ui.RoundedCornerLayout>
    </com.samsung.accessory.hearablemgr.common.ui.ResponsiveWidthLayout>
</LinearLayout>
