<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15sp" android:textColor="@color/item_title_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/report_diagnostic_info_description" android:fontFamily="@string/roboto_regular" android:textDirection="locale" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
        <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/item_title_color" android:id="@+id/text_diagnostic_data" android:background="?android:attr/selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="13dp" android:text="@string/report_diagnostic_data" android:lineSpacingExtra="4sp" android:fontFamily="@string/roboto_regular" android:textDirection="locale" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
        <androidx.appcompat.widget.AppCompatCheckBox android:textSize="15sp" android:textStyle="bold" android:textColor="@color/item_title_color" android:id="@+id/checkbox_agree" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="16dp" android:text="@string/optional" android:fontFamily="@string/roboto_regular" android:paddingStart="5dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
    </LinearLayout>
</ScrollView>
